# collectiveVote

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml
app/: database.py  main.py  models.py  schemas.py
app/doc/: schema.md
app/front2/: package.json
app/front2/src/app/vote/: page.tsx
app/routes/: auth.py  vote.py
audit/: Dockerfile  config.go  db.go  handlers.go  main.go  merkle.go  rabbitmq.go
auth/: Dockerfile  auth.py  database.py  deps.py  main.py  models.py  schemas.py
auth/routes/: auth.py
front/: index.html  tailwind.config.js
front/app/: page.tsx
front/components/Features/: SingleFeature.tsx  featuresData.tsx  index.tsx
front/components/Footer/: index.tsx
front/components/Hero/: index.tsx
front/public/images/logo/: logo-2.svg.orig  logo.svg.orig
front2/: package-lock.json  tailwind.config.js
front2/src/app/: globals.css  layout.tsx  page.tsx
front2/src/app/about/: page.tsx
frontend/: package-lock.json  package.json
frontend/.svelte-kit/: ambient.d.ts
frontend/src/: app.html
frontend/src/lib/components/: Footer.svelte  Header.svelte
frontend/src/routes/: +page.svelte
prometheus/: docker-compose.yml
sec/: Dockerfile  go.mod  main.go
test/: conftest.py  test_auth_flow.py  test_root.py  test_vote.py
votingS/: main.go
