[project]
name = "collectivevote"
version = "0.1.0"
description = "Sistema de votación segura y anónima para organizaciones sindicales"
authors = [{name = "Leonz"}]
dependencies = [
  "fastapi",
  "uvicorn",
  "sqlalchemy",
  "pydantic",
  "python-multipart",
  "passlib[bcrypt]",
  "cryptography"
]

[build-system]
requires = ["uv"]
build-backend = "uv"

[tool.pytest.ini_options]
pythonpath = ["."]
