
[project]
name = "collectivevote"
version = "0.1.0"
description = "Sistema de votación segura y anónima para organizaciones sindicales"
authors = [{name = "Leonz"}]
requires-python = ">=3.8"
dependencies = [
  "fastapi",
  "uvicorn",
  "sqlalchemy",
  "pydantic",
  "python-multipart",
  "passlib[bcrypt]",
  "cryptography"
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov",
  "black",
  "isort",
  "flake8"
]

