[project]
name = "collectivevote"
version = "0.0.1"
description = "Sistema de votación segura y anónima para organizaciones sindicales"
authors = [{name = "Leonz"}]
requires-python = ">=3.8"
dependencies = [
  "fastapi",
  "uvicorn",
  "sqlalchemy",
  "pydantic",
  "python-multipart",
  "passlib[bcrypt]",
  "cryptography"
]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov",
  "black",
  "isort",
  "flake8"
]
